[package]
name = "unord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
poise = "0.5.2"
tokio = { version = "1.24.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
runo = { path = "../runo" }
strum = "0.24.1"
strum_macros = "0.24.3"
util = { path = "../util" }
util-macros = { path = "../util-macros" }
convert_case = "0.6.0"
color-eyre = "0.6.2"
